--- a/.github/workflows/s3-deploy.yml
+++ b/.github/workflows/s3-deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Website to S3
 
 on:
   push:
-    branches: [ main ]  # Adjust if your deployment branch is different
+    branches: [ main ]
 
 jobs:
   deploy-to-s3:
@@ -13,12 +13,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Sync website folder to S3
-        uses: jakejarvis/s3-sync-action@master
+        uses: jakejarvis/s3-sync-action@v0.5.1
         with:
-          args: --acl public-read --delete
+          args: --acl public-read --delete --cache-control "max-age=3600"
         env:
-          AWS_S3_BUCKET: fusion-dessert-static-site # your S3 bucket name
+          AWS_S3_BUCKET: fusion-dessert-static-site
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: us-west-2  # Change to your bucket's region
+          AWS_REGION: us-west-2
           SOURCE_DIR: website
